--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "core-js": "^3.8.3",
+    "jquery": "^3.6.0",
     "normalize.css": "^8.0.1",
+    "popper.js": "^1.16.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
